fix(menu-item): highlight current page nav link on mobile

--- a/styles/menu-item.module.css
+++ b/styles/menu-item.module.css
@@ -15,7 +15,7 @@
   color: dodgerblue;
 }
 
-.active {
+.highlight {
   color: dodgerblue;
 }
 
@@ -40,5 +40,9 @@
 
   .navLinkText:active {
     color: #333;
+  }
+
+  .highlight {
+    color: dodgerblue;
   }
 }
